--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -108,6 +108,18 @@
           transform: translateY(280%);
 }
 
+#textError {
+  /*Styling*/
+  display: none;
+  font-size: .7rem;
+  /*Placemet*/
+  /*Positioning box*/
+  position: absolute;
+  top: 0;
+  -webkit-transform: translateY(280%);
+          transform: translateY(280%);
+}
+
 /*----------------------*/
 /*#Input*/
 /*----------------------*/
@@ -176,7 +188,7 @@ input:placeholder-shown + .label {
 
 .label2 {
   /*Styling*/
-  padding: 0.4rem;
+  padding: 0.8rem;
   color: #646262;
   font-size: 16px;
   /*Placemet*/
@@ -201,6 +213,30 @@ input:placeholder-shown + .label2 {
   transition: -webkit-transform 400ms;
   transition: transform 400ms;
   transition: transform 400ms, -webkit-transform 400ms;
+}
+
+::-webkit-input-placeholder {
+  font-size: 16px;
+  font-family: mentone, sans-serif;
+  font-weight: "light";
+}
+
+:-ms-input-placeholder {
+  font-size: 16px;
+  font-family: mentone, sans-serif;
+  font-weight: "light";
+}
+
+::-ms-input-placeholder {
+  font-size: 16px;
+  font-family: mentone, sans-serif;
+  font-weight: "light";
+}
+
+::placeholder {
+  font-size: 16px;
+  font-family: mentone, sans-serif;
+  font-weight: "light";
 }
 
 /*----------------------*/
