--- a/css/kontakt.scss
+++ b/css/kontakt.scss
@@ -75,6 +75,7 @@ $usize: 20px;
         h3 {
             font-size: $usize;
             font-weight: $bweight;
+            margin-bottom: 2rem;
         }
     }
     
