--- a/css/tilmeld.css
+++ b/css/tilmeld.css
@@ -10,13 +10,13 @@
   font-size: 40px;
   font-weight: Bold;
   position: absolute;
-  top: 8%;
-  left: 13.5%;
+  top: 11%;
+  left: 18.3%;
 }
 
 #form {
   /*Styling*/
-  width: 1400px;
+  width: 1200px;
   height: auto;
   padding: 3rem;
   background-color: #FCFCFC;
@@ -38,30 +38,24 @@
 }
 
 .form-container {
-  width: 1300px;
+  width: 1100px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 50% 50%;
       grid-template-columns: 50% 50%;
   -ms-grid-column-align: center;
       justify-self: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .field {
   /*Styling*/
-  width: 640px;
+  width: 520px;
   border: 2px solid #000;
   margin-bottom: 3rem;
-  margin-left: 0.2rem;
   /*Placemet*/
   /*Positioning box*/
-  justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 h3 {
@@ -73,15 +67,14 @@ h3 {
 
 .field2 {
   /*Styling*/
-  width: 1293px;
+  width: 1069px;
   border: 2px solid #000;
   margin-bottom: 3rem;
+  margin-left: 34.3rem;
   /*Placemet*/
   /*Positioning box*/
-  justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 .field2 h3 {
@@ -97,7 +90,22 @@ h3 {
   border: 1px solid #ff1515;
 }
 
+.field2.error {
+  border: 1px solid #ff1515;
+}
+
 .field .error-circle {
+  /*Styling*/
+  color: #ff1515;
+  /*Placemet*/
+  /*Positioning box*/
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.4rem;
+}
+
+.field2 .error-circle {
   /*Styling*/
   color: #ff1515;
   /*Placemet*/
@@ -123,23 +131,25 @@ h3 {
 /*----------------------*/
 /*#Input*/
 /*----------------------*/
-.input1 {
-  width: 576px;
+#name {
+  width: 516px;
+  height: 55px;
+  border: none;
+  outline: none;
+  padding: 0.4rem;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+#name {
+  width: 516px;
   height: 55px;
   border: none;
   outline: none;
   padding: 0.4rem;
 }
 
-.input2 {
-  width: 576px;
-  height: 55px;
-  border: none;
-  outline: none;
-  padding: 0.4rem;
-}
-
-.input3 {
+#check {
   width: 300px;
   border: none;
   outline: none;
@@ -147,25 +157,26 @@ h3 {
   margin-top: -5%;
 }
 
-.input4 {
-  width: 466px;
+#age {
+  width: 516px;
   height: 55px;
   border: none;
   outline: none;
   padding: 0.4rem;
 }
 
-.input5 {
-  width: 466px;
+#tlf {
+  width: 516px;
   height: 55px;
   border: none;
   outline: none;
   padding: 0.4rem;
 }
 
-.input6 {
-  width: 1290px;
+#email {
+  width: 1065px;
   height: 55px;
+  border: none;
   outline: none;
   padding: 0.4rem;
   -ms-grid-column: 1;
@@ -196,64 +207,6 @@ label.label3 {
   border: none;
 }
 
-.label {
-  /*Styling*/
-  padding: 0.8rem;
-  color: #646262;
-  font-size: 16px;
-  /*Placemet*/
-  /*Positioning box*/
-  position: absolute;
-  top: 0;
-  left: 0;
-  /*Transition*/
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
-  -webkit-transition: -webkit-transform 400ms;
-  transition: -webkit-transform 400ms;
-  transition: transform 400ms;
-  transition: transform 400ms, -webkit-transform 400ms;
-}
-
-input:placeholder-shown + .label {
-  /*Transition*/
-  -webkit-transform: translateY(0%);
-          transform: translateY(0%);
-  -webkit-transition: -webkit-transform 400ms;
-  transition: -webkit-transform 400ms;
-  transition: transform 400ms;
-  transition: transform 400ms, -webkit-transform 400ms;
-}
-
-.label2 {
-  /*Styling*/
-  padding: 0.8rem;
-  color: #646262;
-  font-size: 16px;
-  /*Placemet*/
-  /*Positioning box*/
-  position: absolute;
-  top: 0;
-  left: 0;
-  /*Transition*/
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
-  -webkit-transition: -webkit-transform 400ms;
-  transition: -webkit-transform 400ms;
-  transition: transform 400ms;
-  transition: transform 400ms, -webkit-transform 400ms;
-}
-
-input:placeholder-shown + .label2 {
-  /*Transition*/
-  -webkit-transform: translateY(0%);
-          transform: translateY(0%);
-  -webkit-transition: -webkit-transform 400ms;
-  transition: -webkit-transform 400ms;
-  transition: transform 400ms;
-  transition: transform 400ms, -webkit-transform 400ms;
-}
-
 ::-webkit-input-placeholder {
   font-size: 16px;
   font-family: mentone, sans-serif;
@@ -281,10 +234,40 @@ input:placeholder-shown + .label2 {
 /*----------------------*/
 /*#Buttons*/
 /*----------------------*/
+.buttons {
+  width: 1100px;
+  height: 120px;
+  display: -ms-grid;
+  display: grid;
+  margin-left: 1rem;
+}
+
+.buttons .send {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 1;
+  -ms-grid-row: 5;
+      grid-row-start: 5;
+  grid-row-end: 5;
+  -ms-grid-column-align: start;
+      justify-self: start;
+}
+
+.buttons .fortryd {
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  grid-column-end: 2;
+  -ms-grid-row: 5;
+      grid-row-start: 5;
+  grid-row-end: 5;
+  -ms-grid-column-align: start;
+      justify-self: start;
+}
+
 button {
   /*Styling*/
-  width: 470px;
-  height: 50px;
+  width: 520px;
+  height: 56px;
   background-color: unset;
   padding: .4rem;
   font-size: 1rem;
@@ -296,7 +279,6 @@ button {
   cursor: pointer;
   /*Placemet*/
   /*Positioning box*/
-  position: relative;
 }
 
 button:active,
