--- a/css/tilmeld.scss
+++ b/css/tilmeld.scss
@@ -22,13 +22,13 @@ $usize: 20px;
     font-size: $osize;
     font-weight: $bweight;
     position: absolute;
-    top: 8%;
-    left: 13.5%;
+    top: 11%;
+    left: 18.3%;
 }
 
 #form {
     /*Styling*/
-        width: 1400px;
+        width: 1200px;
         height: auto;
         padding: 3rem;
         background-color: #FCFCFC;
@@ -47,23 +47,22 @@ $usize: 20px;
     }
     
     .form-container {
-        width: 1300px;
+        width: 1100px;
         display: grid;
         grid-template-columns: 50% 50%;
         justify-self: center;
-        align-items: center;
     }
 
     .field {
     /*Styling*/
-        width: 640px;
+        width: 520px;
         border: 2px solid #000;
         margin-bottom: 3rem;
-        margin-left: 0.2rem;
+ 
+        
     /*Placemet*/
         /*Positioning box*/
-        justify-items: center;
-        align-items: center;
+        justify-self: center;
            
     }
 
@@ -76,13 +75,13 @@ $usize: 20px;
 
     .field2 {
         /*Styling*/
-            width: 1293px;
+            width: 1069px;
             border: 2px solid #000;
             margin-bottom: 3rem;
+            margin-left: 34.3rem;
         /*Placemet*/
             /*Positioning box*/
-            justify-items: center;
-        align-items: center;
+            justify-self: center;
                
 
             h3 {
@@ -97,6 +96,8 @@ $usize: 20px;
     /*----------------------*/
     
     .field.error { border: 1px solid #ff1515; }
+
+    .field2.error { border: 1px solid #ff1515; }
     
     .field .error-circle {
     /*Styling*/
@@ -108,6 +109,17 @@ $usize: 20px;
             right: 0;
             padding: 0.4rem;
     }
+
+    .field2 .error-circle {
+        /*Styling*/
+            color: #ff1515;
+        /*Placemet*/
+            /*Positioning box*/
+                position: absolute;
+                top: 0;
+                right: 0;
+                padding: 0.4rem;
+        }
     
     #emailError {
     /*Styling*/
@@ -123,23 +135,24 @@ $usize: 20px;
 /*----------------------*/
 /*#Input*/
 /*----------------------*/
-.input1 {
-    width: 576px;
+#name {
+    width: 516px;
+    height: 55px;
+    border: none;
+    outline: none;
+    padding: 0.4rem;
+    justify-self: center;
+}
+
+#name {
+    width: 516px;
     height: 55px;
     border: none;
     outline: none;
     padding: 0.4rem;
 }
 
-.input2 {
-    width: 576px;
-    height: 55px;
-    border: none;
-    outline: none;
-    padding: 0.4rem;
-}
-
-.input3 {
+#check {
     width: 300px;
     border: none;
     outline: none;
@@ -147,25 +160,26 @@ $usize: 20px;
     margin-top: -5%;
 }
 
-.input4 {
-    width: 466px;
+#age {
+    width: 516px;
     height: 55px;
     border: none;
     outline: none;
     padding: 0.4rem;
 }
 
-.input5 {
-    width: 466px;
+#tlf {
+    width: 516px;
     height: 55px;
     border: none;
     outline: none;
     padding: 0.4rem;
 }
 
-.input6 {
-    width: 1290px;
+#email {
+    width: 1065px;
     height: 55px;
+    border: none;
     outline: none;
     padding: 0.4rem;
     grid-column-start: 1;
@@ -193,48 +207,6 @@ label.label3 {
     border: none;
 }
 
-.label {
-/*Styling*/
-    padding: 0.8rem;
-    color: #646262;
-    font-size: $psize;
-/*Placemet*/
-    /*Positioning box*/
-    position: absolute;
-    top: 0;
-    left: 0;
-/*Transition*/
-    transform: translateY(-100%);
-    transition: transform 400ms;
-}
-
-input:placeholder-shown + .label {
-/*Transition*/
-    transform: translateY(0%);
-    transition: transform 400ms;
-}
-
-.label2 {
-    /*Styling*/
-        padding: 0.8rem;
-        color: #646262;
-        font-size: $psize;
-    /*Placemet*/
-        /*Positioning box*/
-        position: absolute;
-        top: 0;
-        left: 0;
-    /*Transition*/
-        transform: translateY(-100%);
-        transition: transform 400ms;
-    }
-    
-    input:placeholder-shown + .label2 {
-    /*Transition*/
-        transform: translateY(0%);
-        transition: transform 400ms;
-    }
-
 
 ::placeholder {
     font-size: $psize;
@@ -245,10 +217,33 @@ input:placeholder-shown + .label {
 /*#Buttons*/
 /*----------------------*/
 
+.buttons {
+    width: 1100px;
+    height: 120px;
+    display: grid;
+    margin-left: 1rem;
+
+    .send {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 5;
+        grid-row-end: 5;
+        justify-self: start;
+    }
+
+    .fortryd {
+        grid-column-start: 2;
+        grid-column-end: 2;
+        grid-row-start: 5;
+        grid-row-end: 5;   
+        justify-self: start;
+    }
+}
+
 button {
 /*Styling*/
-    width: 470px;
-    height: 50px;
+    width: 520px;
+    height: 56px;
     background-color: unset;
     padding: .4rem;
     font-size: 1rem;
@@ -260,8 +255,7 @@ button {
     cursor: pointer;
 /*Placemet*/
     /*Positioning box*/
-        position: relative;
-}
+}     
 
 button:active,
 button:hover {
