--- a/css/tilmeld.scss
+++ b/css/tilmeld.scss
@@ -213,6 +213,14 @@ label.label3 {
     font-family: $font;
     font-weight: $lweight;
 }
+
+input {
+    font-family: $font;
+    font-size: $psize;
+    font-weight: $lweight;
+}
+
+
 /*----------------------*/
 /*#Buttons*/
 /*----------------------*/
