--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -347,4 +347,6 @@ button:hover {
   -ms-grid-column-align: center;
       justify-self: center;
 }
+
+/* Responsive */
 /*# sourceMappingURL=kontakt.css.map */
