--- a/css/kontakt.scss
+++ b/css/kontakt.scss
@@ -292,3 +292,11 @@ button:hover {
         justify-self: center;
     }
 }
+
+
+
+/* Responsive */
+
+@media only screen and (max-width: 601px) {
+    
+}
