--- a/css/tilmeld.css
+++ b/css/tilmeld.css
@@ -308,6 +308,10 @@ button:hover {
       grid-template-rows: 20% 15% 5%;
   margin-top: 47%;
   padding-top: 1.5%;
+  /*Overskrift footer*/
+  /*Adresse og tlf. Footer*/
+  /*Forestillinger og senior bio*/
+  /*Info om bio*/
 }
 
 .foot .item1 {
@@ -372,5 +376,294 @@ button:hover {
   grid-row-end: 2;
   -ms-grid-column-align: center;
       justify-self: center;
+}
+
+/*Footer mediascreen*/
+@media screen and (max-width: 600px) {
+  .h11 {
+    font-family: mentone, sans-serif;
+    font-size: 40px;
+    font-weight: Bold;
+    position: absolute;
+    top: 2%;
+    left: 29%;
+  }
+  #form {
+    /*Styling*/
+    width: 320px;
+    height: 530px;
+    padding: 1rem;
+    background-color: #FCFCFC;
+    -webkit-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
+    border: 1px solid black;
+    font-family: mentone, sans-serif;
+    margin-top: 2rem;
+    /*Placemet*/
+    /*Positioning box*/
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    /*Placemet*/
+    /*Flex*/
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .form-container {
+    width: 320px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    justify-self: start;
+  }
+  .field {
+    /*Styling*/
+    width: 290px;
+    border: 2px solid #000;
+    margin-bottom: 1rem;
+    /*Placemet*/
+    /*Positioning box*/
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  h3 {
+    width: 100px;
+    height: 15px;
+    font-size: 20px;
+    font-weight: Bold;
+  }
+  .field2 {
+    /*Styling*/
+    width: 290px;
+    border: 2px solid #000;
+    margin-left: 0rem;
+    margin-bottom: 1rem;
+    /*Placemet*/
+    /*Positioning box*/
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  .field2 h3 {
+    font-size: 20px;
+    font-weight: Bold;
+    margin-bottom: 2rem;
+  }
+  /*----------------------*/
+  /*#Errors*/
+  /*----------------------*/
+  .field.error {
+    border: 1px solid #ff1515;
+  }
+  .field2.error {
+    border: 1px solid #ff1515;
+  }
+  .field .error-circle {
+    /*Styling*/
+    color: #ff1515;
+    /*Placemet*/
+    /*Positioning box*/
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.4rem;
+  }
+  .field2 .error-circle {
+    /*Styling*/
+    color: #ff1515;
+    /*Placemet*/
+    /*Positioning box*/
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.4rem;
+  }
+  #emailError {
+    /*Styling*/
+    display: none;
+    font-size: .7rem;
+    /*Placemet*/
+    /*Positioning box*/
+    position: absolute;
+    top: 0;
+    -webkit-transform: translateY(280%);
+            transform: translateY(280%);
+  }
+  /*----------------------*/
+  /*#Input*/
+  /*----------------------*/
+  #name {
+    width: 250px;
+    height: 55px;
+    border: none;
+    outline: none;
+    padding: 0.4rem;
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  #name {
+    width: 200px;
+    height: 55px;
+    border: none;
+    outline: none;
+    padding: 0.4rem;
+  }
+  #check {
+    width: 100px;
+    border: none;
+    outline: none;
+    padding: 0.4rem;
+    margin-top: -5%;
+  }
+  #age {
+    width: 200px;
+    height: 55px;
+    border: none;
+    outline: none;
+    padding: 0.4rem;
+  }
+  #tlf {
+    width: 200px;
+    height: 55px;
+    border: none;
+    outline: none;
+    padding: 0.4rem;
+  }
+  #email {
+    width: 200px;
+    height: 55px;
+    border: none;
+    outline: none;
+    padding: 0.4rem;
+  }
+  input.input3:hover {
+    background-color: #00121F;
+  }
+  input#check.input3 {
+    width: 30px;
+  }
+  input.input3 {
+    -webkit-transform: scale(2);
+            transform: scale(2);
+    margin: 20px;
+    color: #00121F;
+  }
+  label.label3 {
+    width: 250px;
+    border: none;
+  }
+  ::-webkit-input-placeholder {
+    font-size: 16px;
+    font-family: mentone, sans-serif;
+    font-weight: "light";
+  }
+  :-ms-input-placeholder {
+    font-size: 16px;
+    font-family: mentone, sans-serif;
+    font-weight: "light";
+  }
+  ::-ms-input-placeholder {
+    font-size: 16px;
+    font-family: mentone, sans-serif;
+    font-weight: "light";
+  }
+  ::placeholder {
+    font-size: 16px;
+    font-family: mentone, sans-serif;
+    font-weight: "light";
+  }
+  input {
+    font-family: mentone, sans-serif;
+    font-size: 16px;
+    font-weight: "light";
+  }
+  /*----------------------*/
+  /*#Buttons*/
+  /*----------------------*/
+  .buttons {
+    width: 250px;
+    height: 120px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 1rem;
+  }
+  .buttons .send {
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
+  .buttons .fortryd {
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
+  button {
+    /*Styling*/
+    width: 125px;
+    height: 56px;
+    background-color: unset;
+    padding: .4rem;
+    font-size: 1rem;
+    font-weight: 700;
+    border: 2px solid #000;
+    margin-bottom: 1rem;
+    margin-top: 1.5rem;
+    margin-left: 1%;
+    outline: none;
+    cursor: pointer;
+    /*Placemet*/
+    /*Positioning box*/
+  }
+  button:active,
+  button:hover {
+    /*Styling*/
+    border: unset;
+    background-color: #000;
+    color: #FCFCFC;
+  }
+  .foot {
+    width: 260;
+    height: 400px;
+    background-color: #00121F;
+    color: #FEFEFE;
+    font-family: mentone, sans-serif;
+    margin-top: 170%;
+    -ms-grid-columns: 20% 13% 20% 13% 25%;
+        grid-template-columns: 20% 13% 20% 13% 25%;
+  }
+  /*Overskrift footer*/
+  #media-item1 {
+    font-size: 24px;
+    margin-left: 30px;
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  /*Adresse og tlf. footer*/
+  #media-item2 {
+    font-size: 16px;
+    font-weight: 200;
+    font-style: normal;
+    margin-left: 30px;
+  }
+  /*Forestillinger og senior bio*/
+  #media-item3 {
+    font-size: 16px;
+    font-weight: 200;
+    font-style: normal;
+    margin-top: 20px;
+  }
+  /*Info om bio*/
+  #media-item4 {
+    font-size: 16px;
+    font-weight: 200;
+    font-style: normal;
+    margin-top: 20px;
+  }
 }
 /*# sourceMappingURL=tilmeld.css.map */
