--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -349,4 +349,294 @@ button:hover {
 }
 
 /* Responsive */
+@media only screen and (max-width: 601px) {
+  .h11 {
+    font-family: mentone, sans-serif;
+    font-size: 40px;
+    font-weight: Bold;
+    position: absolute;
+    top: 2%;
+    left: 27%;
+  }
+  #form {
+    /*Styling*/
+    width: 320px;
+    height: auto;
+    padding: 1rem;
+    background-color: #FCFCFC;
+    -webkit-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
+    border: 1px solid black;
+    font-family: mentone, sans-serif;
+    /*Placemet*/
+    /*Positioning box*/
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    /*Placemet*/
+    /*Flex*/
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  #form img {
+    display: none;
+    width: 50%;
+  }
+  .form-container {
+    width: 320px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    justify-self: center;
+    margin-left: 2rem;
+  }
+  .field {
+    /*Styling*/
+    width: 290px;
+    border: 2px solid #000;
+    margin-bottom: 1rem;
+    /*Placemet*/
+    /*Positioning box*/
+    position: relative;
+  }
+  .field h3 {
+    font-size: 20px;
+    font-weight: Bold;
+    margin-bottom: 2rem;
+  }
+  /*----------------------*/
+  /*#Errors*/
+  /*----------------------*/
+  .field.error {
+    border: 1px solid #ff1515;
+  }
+  .field .error-circle {
+    /*Styling*/
+    color: #ff1515;
+    /*Placemet*/
+    /*Positioning box*/
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.4rem;
+  }
+  #emailError {
+    /*Styling*/
+    display: none;
+    font-size: .7rem;
+    /*Placemet*/
+    /*Positioning box*/
+    position: absolute;
+    top: 0;
+    -webkit-transform: translateY(280%);
+            transform: translateY(280%);
+  }
+  #textError {
+    /*Styling*/
+    display: none;
+    font-size: .7rem;
+    /*Placemet*/
+    /*Positioning box*/
+    position: absolute;
+    top: 0;
+    -webkit-transform: translateY(280%);
+            transform: translateY(280%);
+  }
+  /*----------------------*/
+  /*#Input*/
+  /*----------------------*/
+  #email {
+    width: 200px;
+    height: 55px;
+    border: none;
+    outline: none;
+    padding: 0.4rem;
+    -ms-grid-column-align: end;
+        justify-self: end;
+  }
+  #text {
+    width: 285px;
+    height: 170px;
+    border: none;
+    outline: none;
+    padding: 0.4rem;
+  }
+  #check {
+    width: 100px;
+    border: none;
+    outline: none;
+    padding: 0.4rem;
+    margin-left: 0rem;
+  }
+  input.input3:hover {
+    background-color: #00121F;
+    cursor: pointer;
+  }
+  input#check.input3 {
+    width: 30px;
+  }
+  input.input3 {
+    -webkit-transform: scale(2);
+            transform: scale(2);
+    margin: 20px;
+    color: #00121F;
+  }
+  label.label3 {
+    width: 100px;
+    border: none;
+  }
+  .label {
+    /*Styling*/
+    padding: 0.8rem;
+    color: #646262;
+    font-size: 16px;
+    /*Placemet*/
+    /*Positioning box*/
+    position: absolute;
+    top: 0;
+    left: 0;
+    /*Transition*/
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+    -webkit-transition: -webkit-transform 400ms;
+    transition: -webkit-transform 400ms;
+    transition: transform 400ms;
+    transition: transform 400ms, -webkit-transform 400ms;
+  }
+  input:placeholder-shown + .label {
+    /*Transition*/
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+    -webkit-transition: -webkit-transform 400ms;
+    transition: -webkit-transform 400ms;
+    transition: transform 400ms;
+    transition: transform 400ms, -webkit-transform 400ms;
+  }
+  .label2 {
+    /*Styling*/
+    padding: 0.8rem;
+    color: #646262;
+    font-size: 16px;
+    /*Placemet*/
+    /*Positioning box*/
+    position: absolute;
+    top: 0;
+    left: 0;
+    /*Transition*/
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+    -webkit-transition: -webkit-transform 400ms;
+    transition: -webkit-transform 400ms;
+    transition: transform 400ms;
+    transition: transform 400ms, -webkit-transform 400ms;
+  }
+  input:placeholder-shown + .label2 {
+    /*Transition*/
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+    -webkit-transition: -webkit-transform 400ms;
+    transition: -webkit-transform 400ms;
+    transition: transform 400ms;
+    transition: transform 400ms, -webkit-transform 400ms;
+  }
+  ::-webkit-input-placeholder {
+    font-size: 16px;
+    font-family: mentone, sans-serif;
+    font-weight: "light";
+  }
+  :-ms-input-placeholder {
+    font-size: 16px;
+    font-family: mentone, sans-serif;
+    font-weight: "light";
+  }
+  ::-ms-input-placeholder {
+    font-size: 16px;
+    font-family: mentone, sans-serif;
+    font-weight: "light";
+  }
+  ::placeholder {
+    font-size: 16px;
+    font-family: mentone, sans-serif;
+    font-weight: "light";
+  }
+  /*----------------------*/
+  /*#Buttons*/
+  /*----------------------*/
+  button {
+    /*Styling*/
+    width: 290px;
+    height: 50px;
+    background-color: unset;
+    padding: .4rem;
+    font-size: 1rem;
+    font-weight: 700;
+    border: 2px solid #000;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    outline: none;
+    cursor: pointer;
+    /*Placemet*/
+    /*Positioning box*/
+    position: relative;
+  }
+  button:active,
+  button:hover {
+    /*Styling*/
+    border: unset;
+    background-color: #000;
+    color: #FCFCFC;
+  }
+  .foot {
+    width: 260;
+    height: 400px;
+    background-color: #00121F;
+    color: #FEFEFE;
+    font-family: mentone, sans-serif;
+    margin-top: 170%;
+    -ms-grid-columns: 20% 13% 20% 13% 25%;
+        grid-template-columns: 20% 13% 20% 13% 25%;
+  }
+  /*Overskrift footer*/
+  #media-item1 {
+    font-size: 24px;
+    margin-left: 30px;
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  /*Adresse og tlf. footer*/
+  #media-item2 {
+    font-size: 16px;
+    font-weight: 200;
+    font-style: normal;
+    margin-left: 30px;
+  }
+  /*Forestillinger og senior bio*/
+  #media-item3 {
+    font-size: 16px;
+    font-weight: 200;
+    font-style: normal;
+    margin-top: 20px;
+  }
+  /*Info om bio*/
+  #media-item4 {
+    font-size: 16px;
+    font-weight: 200;
+    font-style: normal;
+    margin-top: 20px;
+  }
+}
 /*# sourceMappingURL=kontakt.css.map */
