--- a/css/tilmeld.scss
+++ b/css/tilmeld.scss
@@ -47,6 +47,7 @@ $usize: 20px;
     }
     
     .form-container {
+    /* Containeren der indeholder field og field2 */
         width: 1100px;
         display: grid;
         grid-template-columns: 50% 50%;
@@ -95,14 +96,14 @@ $usize: 20px;
     /*#Errors*/
     /*----------------------*/
     
-    .field.error { border: 1px solid #ff1515; }
+    .field.error { border: 1px solid #ff1515; } /* Error color */
 
-    .field2.error { border: 1px solid #ff1515; }
+    .field2.error { border: 1px solid #ff1515; } /* Error color */
     
     .field .error-circle {
     /*Styling*/
         color: #ff1515;
-    /*Placemet*/
+    /*Placement*/
         /*Positioning box*/
             position: absolute;
             top: 0;
@@ -125,7 +126,7 @@ $usize: 20px;
     /*Styling*/
         display: none;
         font-size: .7rem;
-    /*Placemet*/
+    /*Placement*/
         /*Positioning box*/
             position: absolute;
             top: 0;
